added documentation to the xml data